--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="menu">
+        <p>Hey you</p>
+        <input class="addinput" id="title" type="text">
+        <input class="addinput" id="author" type="text">
+        <input class="addinput" id="pages" type="text">
+        <input class="addinput" id="read" type="text">
+        <div id="buttonszone">
+            <button id="addToBtn">Add book</button>
+            <button>Clear</button>
+        </div>
+    </div>
     <header>
-        <div id="title">Library</div>
+        <div id="titleheader">Library</div>
         <button id="addbook">+</button>
     </header>
     <main id="cardzone">
-
+        <div id="bookzone"></div>
     </main>
     <footer>
         <div id="footersentence">Created by Hachounet during The Odin Project Curriculum.</div>
