--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <header>
         <div id="titleheader">Library</div>
         <button id="addbook">+</button>
+        <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
     </header>
     <main id="cardzone">
-        <div id="bookzone"></div>
     </main>
     <footer>
         <div id="footersentence">Created by Hachounet during The Odin Project Curriculum.</div>
