--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
-    <!-- adding Roboto font for title header-->
+    <!-- adding Roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="menu">
-        <p>Hey you</p>
+        <p>Add your book</p>
         <input class="addinput" id="title" type="text">
         <input class="addinput" id="author" type="text">
         <input class="addinput" id="pages" type="text">
-        <input class="addinput" id="read" type="text">
+        <input class="addinput" type="checkbox" class="bookRead" id="read">
         <div id="buttonszone">
             <button id="addToBtn">Add book</button>
             <button>Clear</button>
@@ -25,7 +25,6 @@
     <header>
         <div id="titleheader">Library</div>
         <button id="addbook">+</button>
-        <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
     </header>
     <main id="cardzone">
     </main>
