--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="menu">
+    <div id="menu" class="form_group">
         <p>Add your book</p>
-        <input class="addinput" id="title" type="text">
-        <input class="addinput" id="author" type="text">
-        <input class="addinput" id="pages" type="text">
+        <p></p>
+        <div class="form_group" id="titlediv">
+        <input class="form_input" id="title" type="text" placeholder="Title" required="">
+        <label for="title" class="form_label">Title</label>
+        </div>
+
+        <div class="form_group" id="authordiv">
+        <input class="form_input" id="author" type="text" placeholder="Author" required="">
+        <label for="author" class="form_label">Author</label>
+        </div>
+
+        <div class="form_group" id="pagesdiv">
+        <input class="form_input" id="pages" type="text" placeholder="Pages" required="">
+        <label for="pages" class="form_label">Pages</label>
+        </div>
+        <div id="readdiv">
         <input class="addinput" type="checkbox" class="bookRead" id="read">
+        </div>
         <div id="buttonszone">
             <button id="addToBtn">Add book</button>
             <button>Clear</button>
