--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <!-- adding Ratherlafia font-->
+    <link href="https://fonts.cdnfonts.com/css/ratherlafia-forghive" rel="stylesheet">
+                
+
 </head>
 <body>
+
     <div id="menu" class="form_group">
         <p>Add your book</p>
         <p></p>
@@ -29,19 +35,26 @@
         <label for="pages" class="form_label">Pages</label>
         </div>
         <div id="readdiv">
+        <label class="toggle">
         <input class="addinput" type="checkbox" class="bookRead" id="read">
+        <span class="slider"></span>
+        <span class="labels" data-on="READ" data-off="UNREAD"></span>
+        </label>
         </div>
         <div id="buttonszone">
-            <button id="addToBtn">Add book</button>
-            <button>Clear</button>
+            <button id="addToBtn" class="generalBtns">Add book</button>
+            <button class="generalBtns">Clear</button>
         </div>
     </div>
+
     <header>
         <div id="titleheader">Library</div>
-        <button id="addbook">+</button>
+        <button id="addbook" class="generalBtns">+</button>
     </header>
-    <main id="cardzone">
-    </main>
+
+    <main id="cardzone"></main>
+
+    
     <footer>
         <div id="footersentence">Created by Hachounet during The Odin Project Curriculum.</div>
 
